--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,10 @@
                     </plugin>
                 </plugins>
             </build>
+            <properties>
+                <gpg.executable>gpg2</gpg.executable>
+                <gpg.passphrase>${gpg.passphrase}</gpg.passphrase>
+            </properties>
         </profile>
     </profiles>
 
