--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>org.aion4j</groupId>
     <artifactId>avm-helper</artifactId>
     <version>0.1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>aion4j-avm-helper</name>
     <description>Aion4j helper library for AVM (Aion Virtual Machine)</description>
     <url>https://github.com/satran004/aion4j-maven-plugin</url>
 
