Revert "[maven-release-plugin] prepare for next development iteration"
This reverts commit cc476f9a2f07742ee754c1f7b5694ac003a03517.

# Conflicts:
#	pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <url>https://github.com/bloxbean/aion4j-avm-helper/</url>
         <connection>scm:git:git@github.com:bloxbean/aion4j-avm-helper.git</connection>
         <developerConnection>scm:git:git@github.com:bloxbean/aion4j-avm-helper.git</developerConnection>
-        <tag>avm-helper-0.7.4</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
