--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.aion4j</groupId>
     <artifactId>avm-helper</artifactId>
-    <version>0.8.0-beta1-SNAPSHOT</version>
+    <version>0.8.0-beta2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>aion4j-avm-helper</name>
     <description>Aion4j helper library for AVM (Aion Virtual Machine)</description>
@@ -73,6 +73,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.28</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
